Fixed logo on iphone 6,7,8

--- a/css/section-blocks/section__navigation.css
+++ b/css/section-blocks/section__navigation.css
@@ -103,16 +103,9 @@
     }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 480px) {
   .navigation__logo {
     font-size: 2em;
-    width: 90%;
-  }
-}
-
-@media only screen and (min-width: 381px) and (max-width: 480px) {
-  .navigation__logo {
-    font-size: 2.05em;
-    width: 95%;
+    width: 80%;
   }
 }
